# imdb_sentiment_analysis_llm

./: app.py  docker-compose.yml  evaluate_llm.py  pyproject.toml
notebooks/: retrieval_evaluation.ipynb
src/: prepare_es_index.py  sentiment_analysis.py
src/config/: __init__.py
