[tool.poetry]
name = "imdb-sentiment-analysis-llm"
version = "0.1.0"
description = ""
authors = ["slchangtw <shunlung.chang@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.4.0"
pandas = "^2.2.2"
openai = "^1.41.0"
elasticsearch = "^8.15.0"
mlflow = "^2.15.1"
tiktoken = "^0.7.0"
streamlit = "^1.37.1"
sentence-transformers = "^3.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
black = {extras = ["jupyter"], version = "^24.8.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
